example/secondfile/objects/RDS_V4_Family_Data__c.object
<CustomObject>
    <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-V4 Family Data</description>
    <fields>
        <fullName>ASN_Override_Indicator__c</fullName>
        <description>Premise Details- Premise Data-circuit and VLAN Information-VLAN Information-V4 Family Data-BG P4 Routing Data-ASN Override Indicator</description>
        <label>ASN Override Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATT_Edge_IP_Address__c</fullName>
        <description>Premise Details- Premise Data-circuit and VLAN Information-VLAN Information-V4 Family Data-V4 WAN IP Address-ATT Edge IP Address</description>
        <label>ATT Edge IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BFD_Heart_Beat_Interval__c</fullName>
        <description>Premise Details- Premise Data-circuit and VLAN Information-VLAN Information-V4 Family Data-BFD Heart Beat Interval</description>
        <label>BFD Heart Beat Interval</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGP_Dampening_Indicator__c</fullName>
        <label>BGP Dampening Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloned_From__c</fullName>
        <description>Technical field to capture Id of the record from which it has been cloned during MACD. Not required on page layout.</description>
        <label>Cloned From ?</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Edge_IP_Address__c</fullName>
        <description>Premise Details- Premise Data-circuit and VLAN Information-VLAN Information-V4 Family Data-V4 WAN IP Address-Customer Edge IP Address</description>
        <label>Customer Edge IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSU_Static_Route__c</fullName>
        <description>Premise Details- Premise Data-circuit and VLAN Information-VLAN Information-V4 Family Data-DSU Static Route</description>
        <label>DSU Static Route</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Hash_ID__c</fullName>
        <formula>IF(RDS_VLAN_Information_V4__c !=&apos;&apos;,RDS_VLAN_Information_V4__r.Circuit_and_VLAN_Details__r.Premise__r.DealHash__r.Id, RDS_Circuit_and_VLAN_Details_V4__r.Premise__r.DealHash__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Hash ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encrypted_Password__c</fullName>
        <description>Premise Details- Premise Data-circuit and VLAN Information-VLAN Information-V4 Family Data-MD 5- Encrypted Password</description>
        <label>Encrypted Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hold_Timer__c</fullName>
        <description>Premise Details- Premise Data-circuit and VLAN Information-VLAN Information-V4 Family Data-BG P4 Routing Data- Hold Timer</description>
        <label>Hold Timer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_MD5_Call_Required__c</fullName>
        <formula>IF(AND(Routing_Protocol__c=&apos;BGP4&apos;,Encrypted_Password__c!=null), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is MD5 Call Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keep_Alive_Timer__c</fullName>
        <description>Premise Details- Premise Data-circuit and VLAN Information-VLAN Information-V4 Family Data-BG P4 Routing Data- Keep Alive Time</description>
        <label>Keep Alive Timer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_ASN__c</fullName>
        <description>Premise Details- Premise Data-circuit and VLAN Information-VLAN Information-V4 Family Data-BG P4 Routing Data-Local ASN</description>
        <label>Local ASN</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACD_Type__c</fullName>
        <description>This is a technical field to indicate that record has been created due to MACD Disconnect. Not required on page layout.</description>
        <label>MACD Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multicast_Indicator__c</fullName>
        <description>Premise Details- Premise Data-circuit and VLAN Information-VLAN Information-V4 Family Data-Multicast Indicator</description>
        <label>Multicast Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mutli_HOP_Loop_Back_Address__c</fullName>
        <description>Premise Details- Premise Data-circuit and VLAN Information-VLAN Information-V4 Family Data-BG P4 Routing Data-Mutli HOP Loop back Address</description>
        <label>Mutli HOP Loop Back Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Routes_Indicator__c</fullName>
        <description>Premise Details- Premise Data-circuit and VLAN Information-VLAN Information-V4 Family Data-No Routes Indicator</description>
        <label>No Routes Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Hops__c</fullName>
        <description>Premise Details- Premise Data-circuit and VLAN Information-VLAN Information-V4 Family Data-BG P4 Routing Data-Number Of Hops</description>
        <label>Number Of Hops</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>RDS_VLAN_Information_V4__r.Circuit_and_VLAN_Details__r.Premise__r.DealHash__r.Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <description>To be tacked on report</description>
        <label>Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packet_Filter__c</fullName>
        <description>Premise Details- Premise Data-circuit and VLAN Information-VLAN Information-V4 Family Data-BID Heart Beat Interval</description>
        <label>Packet Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Name__c</fullName>
        <label>Parent Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PremiseId__c</fullName>
        <formula>RDS_VLAN_Information_V4__r.Circuit_and_VLAN_Details__r.Premise__r.Id</formula>
        <label>PremiseId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_Circuit_and_VLAN_Details_V4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Direct Link to Parent RDS-Circuit and VLAN Details record</description>
        <label>RDS-Circuit and VLAN Details</label>
        <referenceTo>Circuit_and_VLAN_Details__c</referenceTo>
        <relationshipLabel>RDS-V4 Family Data</relationshipLabel>
        <relationshipName>RDS_V4_Family_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RDS_VLAN_Information_V4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Premise Details-Premise Data-Circuit And VLAN Details-VLAN Information-V4 Family Data-VLAN Information V4</description>
        <label>RDS-VLAN Information V4</label>
        <referenceTo>VLAN_Information__c</referenceTo>
        <relationshipLabel>RDS-V4 Family Data</relationshipLabel>
        <relationshipName>RDS_V4_Family_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remove_Private_AS_Indicator__c</fullName>
        <description>Premise Details- Premise Data-circuit and VLAN Information-VLAN Information-V4 Family Data-BG P4 Routing Data-Remove Private AS Indicator</description>
        <label>Remove Private AS Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_Advertisement__c</fullName>
        <description>Premise Details- Premise Data-circuit and VLAN Information-VLAN Information-V4 Family Data-BG P4 Routing Data-Route Advertisement</description>
        <label>Route Advertisement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_ASN__c</fullName>
        <description>Premise Details- Premise Data-circuit and VLAN Information-VLAN Information-V4 Family Data-BG P4 Routing Data-Routing ASN</description>
        <label>Routing ASN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_Protocol__c</fullName>
        <description>Premise Details- Premise Data-circuit and VLAN Information-VLAN Information-V4 Family Data-Routing Protocol</description>
        <label>Routing Protocol</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Opportunity_On_RDS__c</fullName>
        <formula>IF( RDS_VLAN_Information_V4__c !=&apos;&apos; ,  RDS_VLAN_Information_V4__r.Circuit_and_VLAN_Details__r.Premise__r.DealHash__r.Selected_Opportunity__c ,  RDS_Circuit_and_VLAN_Details_V4__r.Premise__r.DealHash__r.Selected_Opportunity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selected Opportunity On RDS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Default_Indicator__c</fullName>
        <description>Premise Details- Premise Data-circuit and VLAN Information-VLAN Information-V4 Family Data-BG P4 Routing Data-Send Default Indicator</description>
        <label>Send Default Indicator</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subnet_Mask__c</fullName>
        <description>Premise Details- Premise Data-circuit and VLAN Information-VLAN Information-V4 Family Data-V4 WAN IP Address-Subnet Mask</description>
        <label>Subnet Mask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unencrypted_Password__c</fullName>
        <label>Unencrypted Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unnumbered_Interface_Indicator__c</fullName>
        <description>Premise Details- Premise Data-circuit and VLAN Information-VLAN Information-V4 Family Data-Unnumbered Interface Indicator</description>
        <label>Unnumbered Interface Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V4_Family_Premise_Number__c</fullName>
        <description>This is a technical field to capture Premise Number related to the record, not required on page layout.</description>
        <formula>IF((ISBLANK(RDS_VLAN_Information_V4__c) || ISNULL(RDS_VLAN_Information_V4__c)) , RDS_Circuit_and_VLAN_Details_V4__r.CVLAN_Premise_Number__c , RDS_VLAN_Information_V4__r.VLAN_Premise_Number__c)</formula>
        <label>V4 Family Premise Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validationconfig__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Validationconfig</label>
        <referenceTo>RDS_Validation_Configuration__c</referenceTo>
        <relationshipLabel>RDS-V4 Family Data</relationshipLabel>
        <relationshipName>RDS_V4_Family_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Version_From_Premise__c</fullName>
        <formula>IF(RDS_VLAN_Information_V4__c !=&apos;&apos;,RDS_VLAN_Information_V4__r.Circuit_and_VLAN_Details__r.Premise__r.RDS_Version__c, RDS_Circuit_and_VLAN_Details_V4__r.Premise__r.RDS_Version__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Version From Premise</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>RDS-V4 Family Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Route_Advertisement__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Route_Advertisement__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FDV4-{0000}</displayFormat>
        <label>RDS-V4 Family Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RDS-V4 Family Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>RDS_Edit_Expired</fullName>
        <active>true</active>
        <description>RDS Edit Expired</description>
        <errorConditionFormula>AND(OR(if(RDS_VLAN_Information_V4__r.Circuit_and_VLAN_Details__r.Premise__r.DealHash__r.Edit_Expired_Date__c&lt;NOW(),True,false),ISPICKVAL( RDS_VLAN_Information_V4__r.Circuit_and_VLAN_Details__r.Premise__r.DealHash__r.RDS_object_status__c ,&quot;Review completed&quot;)),!ISCHANGED( Encrypted_Password__c ),!ISCHANGED( Routing_Protocol__c ),!ISCHANGED( Unencrypted_Password__c ),
		$Profile.Name &lt;&gt;&quot;SI_API User&quot;,
		$Profile.Name &lt;&gt;&quot;System Administrator&quot;,
$Profile.Name&lt;&gt;&quot;ATT Partner Community User&quot;,
$Profile.Name &lt;&gt;&quot;SI_EBM_DEV_OPS&quot;, $Profile.Name &lt;&gt;&quot;SI_EBM Admin&quot;)</errorConditionFormula>
        <errorMessage>Edit Time has elapsed . Please contact EBM Admin .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Record_Lock_after_Deal_Hash_creation_V4</fullName>
        <active>true</active>
        <errorConditionFormula>(((ISNULL(RDS_Circuit_and_VLAN_Details_V4__c) ||  ISBLANK(RDS_Circuit_and_VLAN_Details_V4__c))&amp;&amp;  ( RDS_VLAN_Information_V4__r.Circuit_and_VLAN_Details__r.Premise__r.DealHash__r.IsDealHashCreationSuccess__c = true &amp;&amp; $Profile.Name &lt;&gt; &apos;System Administrator&apos; &amp;&amp; $Profile.Name&lt;&gt;&quot;ATT Partner Community User&quot; &amp;&amp; $Profile.Name &lt;&gt; &apos;SI_API User&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;SI_EBM_DEV_OPS&apos;)) || ((ISNULL(RDS_VLAN_Information_V4__c) ||  ISBLANK(RDS_VLAN_Information_V4__c))&amp;&amp; ( RDS_Circuit_and_VLAN_Details_V4__r.Premise__r.DealHash__r.IsDealHashCreationSuccess__c = true &amp;&amp; $Profile.Name &lt;&gt; &apos;System Administrator&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;SI_API User&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;SI_EBM_DEV_OPS&apos;))) &amp;&amp; NOT( ISNEW())</errorConditionFormula>
        <errorMessage>Record cannot be updated after Deal Hash has been created.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Creation_for_Non_MACD_D_V4Fam</fullName>
        <active>true</active>
        <description>This validation rule will prevent creation of records for SI EBM Admin and EBM DEV OPs profile when the record is not of MACD Disconnect type</description>
        <errorConditionFormula>AND(MACD_Type__c &lt;&gt; &apos;D&apos;, MACD_Type__c &lt;&gt; &apos;C&apos;, 
OR($Profile.Name = &apos;SI_EBM_DEV_OPS&apos;,$Profile.Name = &apos;SI_EBM Admin&apos;), 
ISNEW() )</errorConditionFormula>
        <errorMessage>You do not have permission to create a new RDS-V4 Family Data record.</errorMessage>
    </validationRules>
</CustomObject>